--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -6,11 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown editor</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
 </head>
 
-<body class="body">
-    <h1>Hello World!</h1>
+<body class="container-fluid">
+    <!-- <h1>Hello World!</h1> -->
+
+    <section class="row">
+        <textarea id="pad" class="col-md-6 full-height"></textarea>
+        <div class="col-md-6 full-height" id="markdown"></div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js
+        "></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
