--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -12,15 +12,19 @@
 </head>
 
 <body class="container-fluid">
-    <!-- <h1>Hello World!</h1> -->
+
+    <nav>Markdown Editor</nav>
 
     <section class="row">
-        <textarea id="pad" class="col-md-6 full-height"></textarea>
+        <textarea class="col-md-6 full-height" id="pad">Write your text here...</textarea>
         <div class="col-md-6 full-height" id="markdown"></div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/showdown@2.1.0/dist/showdown.min.js
         "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 
